# MSX-IDE

./: .gitignore  README.md  package-lock.json
app/: .gitignore  README.md  index.html  pacjage.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  layout.json  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: GameView.tsx  HierarchyView.tsx  InspectorView.tsx  ProjectView.tsx  SceneView.tsx  StatusBar.tsx  Toolbar.tsx  TopMenu.tsx  theme.css  toolbar.css  topmenu.css
app/src/game/: GameView.tsx
app/src/hierarchy/: HierarchyPanel.tsx
app/src/inspector/: InspectorView.tsx
app/src/project/: ProjectPanel.tsx
app/src/services/: fs.ts
app/src/state/: store.ts
app/src/styles/: app.css  theme.css
app/src/tiles/: types.ts
app/src/ui/: DockLayout.tsx  PanelHeader.tsx  icons.tsx  panel.css
